--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,11 @@ a {
 }
 
 /* line 29, src/sass/components/_mixins.scss */
+p {
+  color: #9194a1;
+}
+
+/* line 33, src/sass/components/_mixins.scss */
 .btn-primary {
   border: 2px solid #5368df;
   background-color: #5368df;
@@ -55,14 +60,14 @@ a {
   border: 2px solid #5368df;
 }
 
-/* line 128, src/sass/components/_mixins.scss */
+/* line 132, src/sass/components/_mixins.scss */
 .btn-primary:hover {
   border: 2px solid #5368df;
   color: #5368df;
   background-color: #ffffff;
 }
 
-/* line 33, src/sass/components/_mixins.scss */
+/* line 37, src/sass/components/_mixins.scss */
 .btn-secondary {
   border: 2px solid #fa5757;
   background-color: #fa5757;
@@ -70,7 +75,7 @@ a {
   color: #ffffff;
 }
 
-/* line 141, src/sass/components/_mixins.scss */
+/* line 145, src/sass/components/_mixins.scss */
 .btn-secondary:hover {
   background-color: #ffffff;
   border: 2px solid #fa5757;
@@ -78,7 +83,7 @@ a {
           box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
 }
 
-/* line 37, src/sass/components/_mixins.scss */
+/* line 41, src/sass/components/_mixins.scss */
 .btn-tertiary {
   -webkit-box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
           box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
@@ -89,7 +94,7 @@ a {
   border: 2px solid #ffffff;
 }
 
-/* line 155, src/sass/components/_mixins.scss */
+/* line 159, src/sass/components/_mixins.scss */
 .btn-tertiary:hover {
   border: 2px solid #252b46;
   color: #252b46;
@@ -97,7 +102,7 @@ a {
           box-shadow: none;
 }
 
-/* line 41, src/sass/components/_mixins.scss */
+/* line 45, src/sass/components/_mixins.scss */
 .btn-primary,
 .btn-secondary,
 .btn-tertiary {
@@ -512,7 +517,14 @@ main .hero {
   overflow: hidden;
 }
 
-/* line 288, src/sass/style.scss */
+@media (max-width: 750px) {
+  /* line 284, src/sass/style.scss */
+  main .hero {
+    margin-bottom: 150px;
+  }
+}
+
+/* line 291, src/sass/style.scss */
 main .hero::after {
   content: "";
   position: absolute;
@@ -528,7 +540,7 @@ main .hero::after {
 }
 
 @media (max-width: 750px) {
-  /* line 288, src/sass/style.scss */
+  /* line 291, src/sass/style.scss */
   main .hero::after {
     top: 12vw;
     bottom: unset;
@@ -537,7 +549,7 @@ main .hero::after {
   }
 }
 
-/* line 308, src/sass/style.scss */
+/* line 311, src/sass/style.scss */
 main .hero__container {
   max-width: 1110px;
   margin: 0 auto;
@@ -555,7 +567,7 @@ main .hero__container {
 }
 
 @media (max-width: 750px) {
-  /* line 308, src/sass/style.scss */
+  /* line 311, src/sass/style.scss */
   main .hero__container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
@@ -564,7 +576,7 @@ main .hero__container {
   }
 }
 
-/* line 320, src/sass/style.scss */
+/* line 323, src/sass/style.scss */
 main .hero__left {
   width: 45%;
   margin-top: 12%;
@@ -573,15 +585,16 @@ main .hero__left {
 }
 
 @media (max-width: 750px) {
-  /* line 320, src/sass/style.scss */
+  /* line 323, src/sass/style.scss */
   main .hero__left {
     width: 100%;
     margin-top: 50px;
     text-align: center;
+    z-index: -50;
   }
 }
 
-/* line 331, src/sass/style.scss */
+/* line 335, src/sass/style.scss */
 main .hero__right {
   width: 45%;
   position: relative;
@@ -590,7 +603,7 @@ main .hero__right {
 }
 
 @media (max-width: 750px) {
-  /* line 331, src/sass/style.scss */
+  /* line 335, src/sass/style.scss */
   main .hero__right {
     width: 100%;
     min-height: 260px;
@@ -598,7 +611,7 @@ main .hero__right {
   }
 }
 
-/* line 343, src/sass/style.scss */
+/* line 347, src/sass/style.scss */
 main .hero__title {
   font-size: 40px;
   font-weight: 500;
@@ -606,13 +619,13 @@ main .hero__title {
 }
 
 @media (max-width: 750px) {
-  /* line 343, src/sass/style.scss */
+  /* line 347, src/sass/style.scss */
   main .hero__title {
     font-size: 32px;
   }
 }
 
-/* line 352, src/sass/style.scss */
+/* line 356, src/sass/style.scss */
 main .hero__text {
   color: #9194a1;
   font-size: 16px;
@@ -620,7 +633,7 @@ main .hero__text {
   margin-bottom: 30px;
 }
 
-/* line 359, src/sass/style.scss */
+/* line 363, src/sass/style.scss */
 main .hero__img {
   position: absolute;
   max-width: 100%;
@@ -631,7 +644,7 @@ main .hero__img {
 }
 
 @media (max-width: 750px) {
-  /* line 359, src/sass/style.scss */
+  /* line 363, src/sass/style.scss */
   main .hero__img {
     -webkit-transform: scale(1);
             transform: scale(1);
@@ -640,7 +653,7 @@ main .hero__img {
 }
 
 @media (max-width: 750px) {
-  /* line 371, src/sass/style.scss */
+  /* line 375, src/sass/style.scss */
   main .hero__buttons {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -649,34 +662,276 @@ main .hero__img {
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
-  /* line 375, src/sass/style.scss */
+  /* line 379, src/sass/style.scss */
   main .hero__buttons > button {
     width: 47%;
     padding: 16px;
   }
 }
 
-/* line 384, src/sass/style.scss */
+/* line 387, src/sass/style.scss */
+main .tabs {
+  margin-bottom: 160px;
+  position: relative;
+}
+
+/* line 391, src/sass/style.scss */
+main .tabs::after {
+  content: "";
+  position: absolute;
+  width: 45%;
+  height: 100%;
+  max-height: 350px;
+  min-height: 200px;
+  bottom: 0;
+  left: 0;
+  z-index: -10;
+  background-color: #5368df;
+  border-radius: 0 150px 150px 0;
+}
+
+@media (max-width: 750px) {
+  /* line 391, src/sass/style.scss */
+  main .tabs::after {
+    bottom: 345px;
+    max-height: 200px;
+    width: 70%;
+  }
+}
+
+/* line 411, src/sass/style.scss */
+main .tabs__container {
+  max-width: 1110px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+
+/* line 415, src/sass/style.scss */
+main .tabs__heading {
+  max-width: 590px;
+  margin: 0 auto;
+  padding: 0 30px;
+  text-align: center;
+}
+
+/* line 421, src/sass/style.scss */
+main .tabs__heading__title {
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
+/* line 426, src/sass/style.scss */
+main .tabs__heading__text {
+  margin-bottom: 50px;
+}
+
+/* line 431, src/sass/style.scss */
+main .tabs__list {
+  max-width: 732px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 750px) {
+  /* line 431, src/sass/style.scss */
+  main .tabs__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+  /* line 441, src/sass/style.scss */
+  main .tabs__list :first-of-type {
+    border-bottom: 1px solid rgba(145, 148, 161, 0.5);
+  }
+}
+
+/* line 446, src/sass/style.scss */
+main .tabs__list__btn {
+  width: 35%;
+  text-align: center;
+  padding: 25px 0;
+  border-bottom: 1px solid rgba(145, 148, 161, 0.5);
+  cursor: pointer;
+}
+
+/* line 454, src/sass/style.scss */
+main .tabs__list__btn:hover .btn {
+  color: #fa5757;
+}
+
+@media (max-width: 750px) {
+  /* line 446, src/sass/style.scss */
+  main .tabs__list__btn {
+    width: 100%;
+    padding: 22px 0;
+  }
+}
+
+/* line 464, src/sass/style.scss */
+main .tabs__list__btn .btn {
+  border: none;
+  outline: none;
+  background: transparent;
+  -webkit-transition: 0.5s all ease-in-out;
+  transition: 0.5s all ease-in-out;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+/* line 474, src/sass/style.scss */
+main .tabs__list__btn.active {
+  position: relative;
+}
+
+/* line 478, src/sass/style.scss */
+main .tabs__list__btn.active .btn::before {
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: #fa5757;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+@media (max-width: 750px) {
+  /* line 478, src/sass/style.scss */
+  main .tabs__list__btn.active .btn::before {
+    width: 50%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+}
+
+/* line 497, src/sass/style.scss */
+main .tabs__tab {
+  position: absolute;
+  opacity: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 70px 30px;
+}
+
+@media (max-width: 750px) {
+  /* line 497, src/sass/style.scss */
+  main .tabs__tab {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+/* line 509, src/sass/style.scss */
+main .tabs__tab.active {
+  opacity: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  max-width: 1110px;
+  min-height: 510px;
+}
+
+@media (max-width: 750px) {
+  /* line 509, src/sass/style.scss */
+  main .tabs__tab.active {
+    left: 0;
+  }
+}
+
+/* line 521, src/sass/style.scss */
+main .tabs__content {
+  min-height: 510px;
+}
+
+@media (max-width: 750px) {
+  /* line 521, src/sass/style.scss */
+  main .tabs__content {
+    min-height: 650px;
+  }
+}
+
+/* line 527, src/sass/style.scss */
+main .tabs__content__left {
+  max-width: 49%;
+  max-height: 380px;
+}
+
+@media (max-width: 750px) {
+  /* line 527, src/sass/style.scss */
+  main .tabs__content__left {
+    max-width: 100%;
+    margin-bottom: 45px;
+  }
+}
+
+/* line 535, src/sass/style.scss */
+main .tabs__content__left img {
+  width: 100%;
+  max-height: 380px;
+}
+
+/* line 541, src/sass/style.scss */
+main .tabs__content__right {
+  max-width: 42%;
+}
+
+@media (max-width: 750px) {
+  /* line 541, src/sass/style.scss */
+  main .tabs__content__right {
+    max-width: 100%;
+    text-align: center;
+  }
+}
+
+/* line 549, src/sass/style.scss */
+main .tabs__content__title {
+  margin-bottom: 35px;
+}
+
+/* line 553, src/sass/style.scss */
+main .tabs__content__text {
+  margin-bottom: 40px;
+}
+
+/* line 560, src/sass/style.scss */
 footer {
   min-height: 90px;
   background-color: #252b46;
 }
 
-/* line 388, src/sass/style.scss */
+/* line 564, src/sass/style.scss */
 footer .attribution {
   color: #ffffff;
   text-align: center;
   padding: 25px;
 }
 
-/* line 392, src/sass/style.scss */
+/* line 568, src/sass/style.scss */
 footer .attribution a,
 footer .attribution a:visited,
 footer .attribution a:active {
   color: #fa5757;
 }
 
-/* line 397, src/sass/style.scss */
+/* line 573, src/sass/style.scss */
 footer .attribution a:hover,
 footer .attribution a:visited:hover,
 footer .attribution a:active:hover {
